# ClientUI

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/data/: CameraValue.hpp  ConnectedUserList.hpp  DiscoverableLevel.hpp  LevelEntry.hpp  LevelKey.hpp  LevelSetting.hpp  User.hpp
include/hooks/: CustomSongLayer.hpp  EditLevelLayer.hpp  EditorUI.hpp  LevelBrowserLayer.hpp  LevelEditorLayer.hpp
include/hooks/ui/: EditorPauseLayer.hpp  EditorUI.hpp  LevelBrowserLayer.hpp  LevelEditorLayer.hpp  PauseLayer.hpp  PlayLayer.hpp
include/managers/: AccountManager.hpp  BrowserManager.hpp  CellManager.hpp  ErrorManager.hpp  FetchManager.hpp  LevelManager.hpp  LocalManager.hpp  WebManager.hpp
include/ui/: BuyPopup.hpp  ClubstepBackground.hpp  EditorOverlay.hpp  ExploreMenu.hpp  GenericForm.hpp  GenericList.hpp  LevelUserList.hpp  LimitsSettings.hpp  MainScene.hpp  ShareSettings.hpp  TulipEditorScene.hpp  TulipExploreMenu.hpp
include/utils/: CryptoHelper.hpp  ThemeProvider.hpp
resources/: AlternateMenuButton.png.kra  BuyPromo.kra  BuyPromo.png.kra  CornerCyan.png.kra  CornerGreen.png.kra  CornerPurple.png.kra  CornerRed.png.kra  DeactiveAlternateMenuButton.png.kra  DeactiveMenuButton.png.kra  DiscordButton.png.kra  DiscoverTabOff.png.kra  DiscoverTabOn.png.kra  EditServerButton.png.kra  ListBottom.png.kra  ListSide.png.kra  ListTop.png.kra  ListTop1.png.kra  ListTop2.png.kra  ListTops.kra  ListTops2.kra  LocalLevelsTabOff.png.kra  LocalLevelsTabOn.png.kra  LoginButton.png.kra  MenuButton.png.kra  MyLevelsTabOff.png.kra  MyLevelsTabOn.png.kra  ShareButton.png.kra  SharedWithMeTabOff.png.kra  SharedWithMeTabOn.png.kra  UserListButton.png.kra
src/compat/: Globed.cpp
src/hooks/: CustomSongLayer.cpp  EditLevelLayer.cpp  LevelBrowserLayer.cpp  LevelEditorLayer.cpp
src/hooks/ui/: EditorPauseLayer.cpp  EditorUI.cpp  LevelBrowserLayer.cpp  LevelEditorLayer.cpp  PauseLayer.cpp  PlayLayer.cpp
src/managers/: AccountManager.cpp  BrowserManager.cpp  CellManager.cpp  ErrorManager.cpp  FetchManager.cpp  LevelManager.cpp  LocalManager.cpp  WebManager.cpp
src/ui/: BuyPopup.cpp  ClubstepBackground.cpp  EditorOverlay.cpp  ExploreMenu.cpp  GenericForm.cpp  GenericList.cpp  LevelUserList.cpp  LimitsSettings.cpp  MainScene.cpp  ShareSettings.cpp  TulipEditorScene.cpp  TulipExploreMenu.cpp
src/utils/: CryptoHelper.cpp  ThemeProvider.cpp
